finished first version after review

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -53,9 +53,9 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 
 \paragraph{}Gostaria também de agradecer meus orientadores Luiz Calôba e Natanael Moura por todo esforço, tempo investido, paciência e boa vontade mostrada. Além disso, agradeço o voto de confiança dado e espero ter retribuído ao nível merecido. Esses aprendizado proporcionado me tornaram um profissional melhor do que quando comecei o trabalho.
 
-\paragraph{}Gostaria de agradecer ao Gabriel Torres e ao Luiz Évora pela colaboração direta no trabalho. Hora trazendo um pouco da experiência, hora revisando o conteúdo do texto.
+\paragraph{}Gostaria de agradecer ao Luiz Évora e Gabriel Torres pela colaboração direta no trabalho. Hora trazendo um pouco da experiência, hora revisando o conteúdo do texto.
 
-\paragraph{}Gostaria de agradecer outros familiares que estiveram comigo nessa jornada assim como minha avó Sônia e minhas tias Silvia, Silvane e Maria
+\paragraph{}Gostaria de agradecer outros familiares que estiveram comigo nessa jornada assim como minha avó Sônia e minhas tias Silvia, Silvane e Maria.
 
 \paragraph{}Em último lugar, mas não menos importante, gostaria de agradecer ao meus amigos que são parte chave na minha vida. Em especial, Rafael Chimielenski que sempre esteve comigo nos momentos mais complicados da minha vida.
 
