--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -597,3 +597,18 @@
 	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1212-5701},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+@article{
+	FinancialCrisis,
+	title = "Bank lending during the financial crisis of 2008",
+	journal = "Journal of Financial Economics",
+	volume = "97",
+	number = "3",
+	pages = "319 - 338",
+	year = "2010",
+	note = "The 2007-8 financial crisis: Lessons from corporate finance",
+	issn = "0304-405X",
+	doi = "https://doi.org/10.1016/j.jfineco.2009.12.001",
+	url = "http://www.sciencedirect.com/science/article/pii/S0304405X09002396",
+	author = "Victoria Ivashina and David Scharfstein",
+	abstract = "This paper shows that new loans to large borrowers fell by 47% during the peak period of the financial crisis (fourth quarter of 2008) relative to the prior quarter and by 79% relative to the peak of the credit boom (second quarter of 2007). New lending for real investment (such as working capital and capital expenditures) fell by only 14% in the last quarter of 2008, but contracted nearly as much as new lending for restructuring (LBOs, M&As, share repurchases) relative to the peak of the credit boom. After the failure of Lehman Brothers in September 2008, there was a run by short-term bank creditors, making it difficult for banks to roll over their short term debt. We find that there was a simultaneous run by borrowers who drew down their credit lines, leading to a spike in commercial and industrial loans reported on bank balance sheets. We examine whether these two stresses on bank liquidity led them to cut lending. In particular, we show that banks cut their lending less if they had better access to deposit financing and thus, they were not as reliant on short-term debt. We also show that banks that were more vulnerable to credit-line drawdowns because they co-syndicated more of their credit lines with Lehman Brothers reduced their lending to a greater extent."
+}
