--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
@@ -1,11 +1,11 @@
- \paragraph{}Neste trabalho foi proposto um modelo baseado em redes neurais, cujo o objetivo era prever o valor médio do PLD para alguns meses a frente. Para isso, foi necessária a decomposição do sinal, deixando para o treinamento da rede somente a parte não-determinística. Foram testados diferentes métodos de extração das componentes até chegar na que foi utilizada no capítulo 5. Além disso, as MLPs foram treinadas para quantidades variadas de neurônios na camada intermediária, buscando a melhor arquitetura que solucionasse o problema proposto.
+ \paragraph{}Neste trabalho foi proposto um modelo baseado em redes neurais, com o objetivo de prever o valor médio do PLD para alguns meses a frente. Para isso, foi necessária a decomposição do sinal, deixando para o treinamento da rede somente a parte não-determinística. Foram testados diferentes métodos de extração das componentes até chegar na que foi utilizada no capítulo 5. Além disso, as MLPs foram treinadas para quantidades variadas de neurônios na camada intermediária, buscando a melhor arquitetura que solucionasse o problema proposto.
  
  \paragraph{}Diante dos resultados obtidos com o trabalho, observou-se a dificuldade em utilizar redes neurais MLP para conjuntos de dados pequenos. Apesar disso, atingiu-se os objetivos mencionados no começo do projeto. 
   
  \paragraph{}O método utilizado para o pré-processamento dos dados pode ser replicado para outros tipos de séries temporais, assim como o método para a seleção da melhor rede pode ser explorado em outros trabalhos.
  
- \paragraph{}Quanto às conclusões obtidas através do experimento, observou-se que o erro tem uma tendência crescente conforme o número de meses a frente na previsão, assim como esperado, tornando cada vez mais complexa a utilização do modelo para cenário muito distantes. A aplicação da rede para correção dos erros trouxe para o a previsão um compromisso entre erro máximo e erro médio, conforme a arquitetura escolhida.
+ \paragraph{}Quanto às conclusões obtidas através do experimento, observou-se que o erro tem uma tendência crescente conforme o número de meses a frente na previsão, assim como esperado, tornando cada vez mais complexa a utilização do modelo para cenário muito distantes. A aplicação da rede para correção dos erros trouxe para a previsão um compromisso entre erro máximo e médio, conforme a arquitetura escolhida.
  
  \paragraph{}Para trabalhos futuros, seria interessante comparar os resultados obtidos com modeos diferentes, como por exemplo, SARIMA e GARCH e ADALASSO. Além disso, podem ser exploradas outras formas de extração das componentes da série temporal, de forma a obter um sinal residual com menos energia dos que os que foram encontrados.
  
- \paragraph{}Outra abordagem pode ser a de considerar os dados para os anos antes de 2015 e analisar quanto isso afeta a previsão do PLD médio mensal. Nesse caso, cabe também utilizar estruturas de redes neurais mais complexas, como por exemplo LSTM - \textit{Long Short-Term Memory}.
+ \paragraph{}Outra abordagem pode ser a de considerar os dados para os anos anteriores 2015 e analisar quanto isso afeta a previsão do PLD médio mensal. Nesse caso, cabe também utilizar estruturas de redes neurais mais complexas, como por exemplo LSTM - \textit{Long Short-Term Memory}.
